# Skiritai

./: .env.example  .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  README_zh.md  docker-compose.yml  pyproject.toml
.github/workflows/: deploy-docs.yml  publish.yml  test.yml
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: logger.py  main.py
backend/scripts/: browser_manager.py
backend/tests/: conftest.py  test_acceptance.py  test_e2e.py  test_functional.py  test_perception_unit.py  test_py_case.py  test_replay_vs_explore.py
cases/baidu_search/: case.py  case.yaml
cases/baidu_search_explore/: case.py  case.yaml
cases/baidu_search_replay/: case.py  case.yaml
cases/playwright_docs/: case.py  case.yaml
docs/: index.md  package-lock.json  package.json
docs/.vitepress/: config.ts
docs/api/: ai-context.md  base-case.md  event-bus.md  index.md  llm-providers.md  tools.md
docs/guide/: browser-sessions.md  cli.md  configuration.md  flow-api.md  getting-started.md  installation.md  perception.md  replay-scripts.md  roadmap.md  web-server.md  writing-cases.md  yaml-cases.md
docs/zh/: index.md
examples/baidu_search/: .case_context  case.py
examples/baidu_search_explore/: case.py
examples/baidu_search_replay/: case.py
examples/baidu_yaml/: case.yaml
examples/context_demo/: case.py
examples/failure_policies/: case.py
examples/flow_demo/: demo.py
examples/hooks_demo/: case.py
examples/ktovoz_blog/: case.py
examples/minimal/: case.py
examples/playwright_docs/: case.py
examples/step_modes/: .case_context  case.py
frontend/: package.json
frontend/src/: App.tsx  index.css
plan/: code-review-2026-05.md  pip-to-uv-migration.md  platform-driver-abstraction.md  remove-browser-use.md  rfc-skill-based-architecture.md
report/: index.html  package-lock.json  package.json  vite.config.ts
report/src/: App.vue  data.ts  main.ts  types.ts
skiritai/: __init__.py  cli.py  logger.py
skiritai/core/: __init__.py  _case_discovery.py  _session.py  agent_loop.py  ai_context.py  base_case.py  browser.py  case_context.py  execution_manager.py  flow.py  human_click.py  llm_retry.py  notify.py  perception.py  report_builder.py  runner.py  script_generator.py  tool_registry.py  tools.py  yaml_runner.py
skiritai/events/: __init__.py
skiritai/llm/: __init__.py  _config.py  _factory.py  anthropic_provider.py  base.py  openai_provider.py  registry.py
skiritai/web/: __init__.py  app.py  ws_manager.py
tests/: conftest.py
tests/acceptance/: conftest.py  test_acceptance.py  test_api_ws.py  test_events_scripts.py  test_execution.py
tests/e2e/: conftest.py  test_api.py  test_browser_persistence.py  test_e2e.py  test_events.py  test_replay.py
tests/functional/: test_agent_loop.py  test_ai_context.py  (+8 more)
(+129 files in other folders)
