[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skiritai"
version = "0.1.0"
description = "AI-driven browser test automation framework"
requires-python = ">=3.11"
license = "MIT"

dependencies = [
    "langchain-core>=0.3.0",
    "langchain-openai>=0.3.0",
    "langgraph>=0.2.0",
    "playwright>=1.40.0",
    "python-dotenv",
    "loguru",
    "browser-use>=0.12.0",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.0.0",
    "websockets",
]
anthropic = [
    "langchain-anthropic>=0.3.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "pytest-cov",
]

[project.scripts]
skiritai = "skiritai.cli:main"

[tool.setuptools.packages.find]
include = ["skiritai*"]

[tool.setuptools.package-data]
skiritai = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
