[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "skiritai"
version = "0.0.10a1"
description = "AI-driven browser test automation framework"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["testing", "automation", "ai", "playwright", "browser", "agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Framework :: AsyncIO",
    "Typing :: Typed",
]
authors = [
    { name = "Joe Shen", email = "ktovoz@qq.com" },
]
dependencies = [
    "langchain-core>=0.3.0",
    "langchain-openai>=0.3.0",
    "langgraph>=0.2.0",
    "playwright>=1.40.0",
    "playwright-stealth>=2.0.0",
    "python-dotenv",
    "loguru",

]

[project.urls]
Homepage = "https://github.com/Ktovoz/Skiritai"
Repository = "https://github.com/Ktovoz/Skiritai"
Issues = "https://github.com/Ktovoz/Skiritai/issues"

[project.optional-dependencies]
web = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.0.0",
    "websockets",
]
anthropic = [
    "langchain-anthropic>=0.3.0",
]
[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "pytest-cov",
    "build",
    "twine",
]

[project.scripts]
skiritai = "skiritai.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["skiritai"]
artifacts = ["skiritai/py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
